# gcp-media-go

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  graph.txt  video-warehouse.code-workspace
.github/workflows/: main.yaml
.trunk/: trunk.yaml
cmd/: BUILD.bazel  pipeline.go
configs/: .env.local.toml  .env.toml  BUILD.bazel  app-test.yaml  app.yaml  example_.env.test.toml
docs/: SettingUpIntelliJ.md
pkg/chains/: BUILD.bazel  movie_ingestion.go  movie_resize.go  movie_summary.go
pkg/cloud/: BUILD.bazel  config.go  model.go  pub_sub_listener.go  state.go  utils.go  wrappers.go
pkg/commands/: BUILD.bazel  ffmpeg.go  gcs_file_upload.go  gcs_to_temp_file.go  gcs_to_tmpfs.go  gcs_upload.go  media_assembly.go  media_cleanup.go  media_persist_to_big_query.go  media_prompt.go  media_summary_creator.go  media_summary_json_to_struct.go  media_trigger_reader.go  media_upload.go  movie_assembly.go  save_movie_to_bq.go  scene_builder.go  scene_extractor.go  summary_resp_to_struct.go  video_cleanup.go  video_upload.go
pkg/cor/: BUILD.bazel  base_chain.go  base_command.go  base_context.go  interfaces.go
pkg/model/: BUILD.bazel  chain.go  chain_context.go  config.go  config_test.go  constants.go  domain.go  domain_model.go  examples.go  gcs.go  gcs_object.go  gcs_object_message.go  generative.go  interfaces.go  messages.go  persistent.go  transient.go  video_format_filter.go
pkg/pipeline/: BUILD.bazel  ffmpeg_chain.go  ffmpeg_command.go  gemini_command.go  movie_ai.go  movie_review_command.go  pubsub_listener.go  pubsub_listener_test.go  video_transformer.go  video_transformer_test.go
pkg/services/: BUILD.bazel  media.go  queries.go  search.go
pkg/telemetry/: BUILD.bazel  setup_logging.go  setup_trace.go
pkg/workflow/: BUILD.bazel  media_embedding_generator_workflow.go  media_embeddings.go  media_ingestion.go  media_reader_workflow.go  media_resize.go  media_resize_workflow.go
test/: test.go
test/chains/: BUILD.bazel  movie_ingestion_test.go  movie_resize_test.go  movie_summary_test.go
test/cloud/: BUILD.bazel  config_test.go  pubsub_listener_test.go
test/model/: BUILD.bazel  config_test.go  domain_model_test.go  transient_test.go
test/pipeline/: BUILD.bazel  ffmpeg_command_test.go  ffmpeg_test.go  movie_review_command_test.go  movie_test.go  pubsub_listener_test.go  testharness.go
test/pkg/model/: BUILD.bazel  config_test.go
test/pkg/pipeline/: BUILD.bazel  ffmpeg_command_test.go  pubsub_listener_test.go
test/services/: BUILD.bazel  search_service_test.go
test/workflow/: BUILD.bazel  base_test.go  media_embedding_test.go  media_ingestion_test.go  media_resize_test.go
web/apps/: main.go
web/apps/api-server/: BUILD.bazel  api-server.go
web/apps/api_server/: BUILD.bazel  README.md  api_server.go  dashboard.go  file_upload.go  listeners.go  media.go  setup.go
web/apps/media-search/: BUILD.bazel  index.html  package-lock.json  package.json  pnpm-lock.yaml
web/apps/media-search/public/: BUILD.bazel
web/apps/media-search/src/: App.tsx  BUILD.bazel  main.tsx
web/apps/media-search/src/components/: Cast.tsx  Footer.tsx  LoadingIcon.tsx  MediaResults.tsx  MediaRow.tsx  SceneData.tsx  SearchBar.tsx  TopNav.tsx
web/apps/media-search/src/pages/: Dashboard.tsx  FileUpload.css  FileUpload.tsx  Search.tsx
web/apps/media-search/src/shared/: model.ts
