load("@io_bazel_rules_go//go:def.bzl", "go_library")

# Copyright 2024 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

go_library(
    name = "cloud",
    srcs = [
        "gcs.go",
        "model.go",
        "pub_sub_listener.go",
        "state.go",
        "utils.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/solutions/media/pkg/cloud",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cor",
        "@com_github_burntsushi_toml//:toml",
        "@com_github_google_generative_ai_go//genai",
        "@com_google_cloud_go_bigquery//:bigquery",
        "@com_google_cloud_go_pubsub//:pubsub",
        "@com_google_cloud_go_storage//:storage",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@org_golang_google_api//option",
        "@org_golang_x_time//rate",
    ],
)
