load("@io_bazel_rules_go//go:def.bzl", "go_library")

# Copyright 2024 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

go_library(
    name = "commands",
    srcs = [
        "ffmpeg.go",
        "gcs_to_tmpfs.go",
        "gcs_upload.go",
        "media_prompt.go",
        "media_trigger_reader.go",
        "video_upload.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/solutions/media/pkg/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cor",
        "//pkg/cloud",
        "//pkg/model",
        "@com_github_google_generative_ai_go//genai",
        "@com_google_cloud_go_storage//:storage",
    ],
)
