# Copyright 2024 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:build/copy_file_groups.bzl", "copy_file_groups")

copy_file_groups(
    name = "copy_ffmpeg",
    srcs = select({
        "//:apple_legacy": [
            "//third_party/ffmpeg/darwin_arm64:ffmpeg_export",
        ],
        "//:apple_silicon": [
            "//third_party/ffmpeg/darwin_arm64:ffmpeg_export",
        ],
        "//:linux_arm": [
            "//third_party/ffmpeg/linux_arm64:ffmpeg_export",
        ],
        "//:linux_x86_64": [
            "//third_party/ffmpeg/linux_x86_64:ffmpeg_export",
        ],
    }),
    prefix = "bin",
    visibility = ["//visibility:public"],
)

go_library(
    name = "pipeline",
    srcs = [
        "ffmpeg_chain.go",
        "movie_ai.go",
    ],
    data = [
        "copy_ffmpeg",
        "//configs:.env.test.toml",
        "//configs:.env.toml",
    ],
    importpath = "github.com/GoogleCloudPlatform/solutions/media/pkg/pipeline",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cor",
        "//pkg/commands",
        "//pkg/model",
        "@com_github_google_generative_ai_go//genai",
        "@com_google_cloud_go_storage//:storage",
    ],
)
