# Copyright 2024 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@io_bazel_rules_go//go:def.bzl", "go_test")

# "movie_resize_test.go",

# gazlle-ignore
go_test(
    name = "chains_test",
    size = "medium",
    srcs = [
        "movie_summary_test.go",
    ],
    data = [
        "//configs:.env.test.toml",
        "//configs:.env.toml",
        "//pkg/chains:copy_ffmpeg",
    ],
    rundir = ".",
    deps = [
        "//pkg/chains",
        "//pkg/cloud",
        "//pkg/cor",
        "//pkg/model",
        "//test",
        "@com_github_stretchr_testify//assert",
    ],
)
