load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    data = [
        "//configs:.env.local.toml",
        "//configs:.env.test.toml",
        "//configs:.env.toml",
    ],
    rundir = ".",
    deps = [
        "//pkg/cloud",
        "//pkg/model",
        "//test",
        "@com_github_stretchr_testify//assert",
    ],
)

go_test(
    name = "pubsub_listener_test",
    srcs = ["pubsub_listener_test.go"],
    data = [
        "//configs:.env.local.toml",
        "//configs:.env.test.toml",
        "//configs:.env.toml",
    ],
    rundir = ".",
    deps = [
        "//pkg/cloud",
        "//pkg/model",
        "//test",
        "@com_github_stretchr_testify//assert",
    ],
)
