# Copyright 2024 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "ffmpeg_test",
    size = "small",
    srcs = ["ffmpeg_test.go"],
    data = [
        "//configs:.env.test.toml",
        "//configs:.env.toml",
        "//pkg/pipeline:copy_ffmpeg",
    ],
    rundir = ".",
    deps = [
        "//pkg/cor",
        "//pkg/cloud",
        "//pkg/commands",
        "//pkg/model",
        "//pkg/pipeline",
        "//test",
        "@com_github_stretchr_testify//assert",
    ],
)

go_test(
    name = "movie_test",
    size = "small",
    srcs = ["movie_test.go"],
    data = [
        "//configs:.env.test.toml",
        "//configs:.env.toml",
        "//pkg/pipeline:copy_ffmpeg",
    ],
    rundir = ".",
    deps = [
        "//pkg/cor",
        "//pkg/cloud",
        "//pkg/commands",
        "//pkg/model",
        "//pkg/pipeline",
        "//test",
        "@com_github_stretchr_testify//assert",
    ],
)
